server-go/internal/k8s/testdata/namespace_policies/project.yaml
---
metadata:
  labels:
    excalibase.io/component: isolation
  name: namespace-default-deny
  namespace: org1-proj
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
metadata:
  labels:
    excalibase.io/component: isolation
  name: namespace-isolation
  namespace: org1-proj
spec:
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: platform
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cnpg-system
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
  podSelector:
    matchExpressions:
    - key: excalibase.io/component
      operator: NotIn
      values:
      - app
  policyTypes:
  - Ingress
